# pana

./: .gitignore  AGENTS.md  PUBLISHING.md  README.md  debug_thinking2.py  main.py  pyproject.toml  readme.md
agent/: __init__.py  __main__.py  agent.py  auth.py  copilot_oauth.py
agent007/: __main__.py
agents/: __init__.py  agent.py  base.py  coding_agent.py  context.py
ai/: auth.py  copilot_oauth.py  manager.py  types.py
ai/auth/: base.py
ai/providers/: __init__.py  base.py  copilot.py  factory.py  mock.py  openai.py  provider.py
ai/providers/copilot/: __init__.py  auth.py  copilot_oauth.py  model.py  model_manager.py  models.py  provider.py
app/: __init__.py  config.py
app/tui/: __init__.py  app.py  app.tcss  autocomplete.py  commands.py  editor_component.py  fuzzy.py  keybindings.py  keys.py  mini.py  stdin_buffer.py  terminal.py  terminal_image.py  tui.py  undo_stack.py  utils.py  widgets.py
app/tui/components/: __init__.py  box.py  cancellable_loader.py  editor.py  footer.py  image.py  input.py  loader.py  markdown.py  select_list.py  settings_list.py  spacer.py  text.py  truncated_text.py
examples/extensions/: hello.py
pana/: __init__.py  __main__.py  main.py  state.py
pana/agents/: agent.py  skills.py  system_prompt.py  tool_streams.py  tools.py
pana/agents/tools/: __init__.py  _helpers.py  bash.py  edit.py  read.py  write.py
pana/ai/providers/: auth.py  factory.py  model.py  provider.py
pana/ai/providers/copilot/: auth.py  provider.py  responses.py
pana/app/: __init__.py  chat_themes.py  context.py  events.py  input_processing.py  stream_handler.py  theme.py  ui_themes.py
pana/app/commands/: __init__.py  base.py  help.py  login.py  model.py  new.py  quit.py  registry.py  settings.py
pana/app/extensions/: __init__.py  api.py  manager.py
pana/app/tool_renderer/: __init__.py  _fallback.py  base.py  bash.py  edit.py  read.py  write.py
pana/extensions/: __init__.py  api.py  loader.py  manager.py
pana/themes/: dark.json  light.json
pana/tui/: __init__.py  ansi.py  autocomplete.py  editor_component.py  keybindings.py  keys.py  kill_ring.py  mini.py  stdin_buffer.py  terminal.py  terminal_image.py  theme.py  tui.py  utils.py
pana/tui/components/: __init__.py  box.py  cancellable_loader.py  editor.py  footer.py  image.py  input.py  loader.py  markdown.py  select_list.py  settings_list.py  text.py  truncated_text.py  user_message.py
tests/: conftest.py  test_agent.py  test_auth.py  test_backport_features.py  test_context.py  test_copilot_oauth.py  test_editor.py  test_fuzzy.py  test_input.py  test_keys.py  test_markdown.py  test_mini_format.py  test_mini_markdown.py  test_overlay.py  test_regional_indicator.py  test_select_list.py  test_skills.py  test_stdin_buffer.py  test_terminal_image.py  test_theme.py  test_thinking.py  test_tools.py  test_truncated_text.py  test_tui.py  test_tui_resize.py  test_wrap_ansi.py
tests/tools/: conftest.py  test_bash.py  test_edit.py  test_read.py  test_write.py
