[project]
name = "agent"
version = "0.1.0"
description = "A coding agent with a minimalist TUI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai",
    "pyperclip>=1.11.0",
    "requests",
    "python-dotenv",
    "prompt-toolkit>=3.0",
    "grapheme>=0.6.0",
    "mistune>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pytest",
    "pytest-asyncio",
    "requests-mock",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E741"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "vulture>=2.15",
]
