[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pana"
version = "0.1.1"
description = "A minimalist AI coding agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Juan Sebastian Quintero"},
]
keywords = ["ai", "coding-agent", "tui", "copilot", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Terminals",
]
dependencies = [
    "pydantic-ai",
    "pyperclip>=1.11.0",
    "requests",
    "python-dotenv",
    "prompt-toolkit>=3.0",
    "grapheme>=0.6.0",
    "mistune>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pytest",
    "pytest-asyncio",
    "requests-mock",
    "vulture>=2.15",
]

[project.urls]
Homepage = "https://github.com/juan/pana"
Repository = "https://github.com/juan/pana"
Issues = "https://github.com/juan/pana/issues"

[project.scripts]
pana = "pana.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["pana"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E741"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
